asoe/asg1/code/string_set/92-uncomment.oc.err
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
oc: auxlib.cpp:52: void veprintf(const char*, __va_list_tag*): Assertion `exec::execname.size() != 0' failed.
